Updated responsive UI, fixed x scroll direction in small screens, updated Dark mode

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: local('JetBrains Mono'), url(/fonts/JetBrains_Mono/JetBrainsMono-VariableFont_wght.ttf);
+}
+
 *{
   box-sizing: border-box;
   padding: 0;
@@ -5,11 +10,9 @@
   font-family: 'JetBrains Mono', monospace;
   text-decoration: none;
   background-color: var(--primary-color);
-  
 }
 html{
   scroll-behavior: smooth;
-  
 }
 
 :root{
@@ -21,7 +24,7 @@ html{
   1A1C20*/
 }
 
-.dark-theme{
+.dark{
   --primary-color:#161b21;
   --secondary-color:#f4a950;
 }
@@ -35,7 +38,7 @@ body{
 .slide1{
   width: 100%;
   height: 100vh;
-  /* overflow-y: scroll; */
+  padding: 1rem;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -48,8 +51,6 @@ body{
   flex-wrap: wrap;
   scroll-snap-align: start;
   scroll-behavior: smooth;
-  /* overflow-x: hidden; */
-  
 }
 
 .hero-header{
@@ -131,11 +132,24 @@ nav .navlinks li a::after{
 nav ul li a:hover::after{
   width: 100%;
 }
-
-#icon{
-  text-align: center;
+.dark-toggle-box{
+  margin-top: 40px;
+  margin-right: 30px;
+  float: right;
+}
+.dark-toggle:hover {
   cursor: pointer;
 }
+
+.dark-toggle::after {
+  content: "☀️";
+}
+
+.dark .dark-toggle::after {
+  content: "🌙";
+}
+
+
 .container{
   display: flex;
   justify-content: space-around;
@@ -168,7 +182,7 @@ nav ul li a:hover::after{
 }
 
 .btn-group{
-  display: block;
+  display: flex;
   margin: 45px 0;
 }
 
@@ -208,7 +222,7 @@ nav ul li a:hover::after{
 
 /* responsive design and display nav bar for small screens */
 
-@media(max-width:930px)
+@media(max-width:900px)
 {
   nav .togglebtn{
     display: initial;
@@ -238,14 +252,14 @@ nav ul li a:hover::after{
   nav .navlinks{
     position: absolute;
     top:130px;
-    right:-100%;
+    /* right:-100%; */
+    display: none;
     bottom: 0;
     width: 50%;
     height: 100vh;
     background-color: var(--primary-color);
     z-index: 3;
-    /* box-shadow: 5px 13px 30px rgb(0,0,0,0.1); */
-    transition: 0.8s;
+    /* transition: 0.8s; */
     padding: 25px 0px;
   }
   nav .navlinks li{
@@ -259,10 +273,12 @@ nav ul li a:hover::after{
   }
   nav .navlinks.open{
     right:0;
+    display: block;
+    transition: 2s;
   }
 }
 
-@media(max-width:768px){
+@media only screen and (max-width:700px){
   .container{
     flex-direction: column;
     padding-top: 2rem;
@@ -270,6 +286,24 @@ nav ul li a:hover::after{
   .hero-text{
     padding: 40px 0px;
 
+  }
+  .container-aboutme{
+    flex-direction: column;
+    padding-top: 2rem;
+  }
+  .center-aboutme{
+    flex-direction: column;
+    padding:5px 0px
+  }
+  .para-aboutme{
+    flex-direction: column;
+    padding: 5px 70px;
+  }
+  .aboutme-text{
+    flex-direction: column;
+    padding: 5px 70px;
+  }
+  .tab-titles{
   }
 }
 
@@ -310,7 +344,6 @@ nav ul li a:hover::after{
 }
 
 .center-aboutme{
-  /* max-width: 500px; */
   display: flex;
   flex-direction: column;
 }
@@ -329,7 +362,6 @@ nav ul li a:hover::after{
 
 .tab-titles{
   display: flex;
-  /* flex-direction: column; */
   margin: 10px 0 20px;
 }
 
@@ -350,7 +382,6 @@ nav ul li a:hover::after{
   left: 0;
   bottom: -8px;
   transition: 0.5s;
-
 }
 
 .tab-links.active-link::after{
